# api/handle_tags.go
@@ -8,14 +8,6 @@ import (
 type TagsApi struct {
 }
 
-// GetTagsList godoc
-// @Summary Get list of tags
-// @Description Retrieve a list of all available tags
-// @Tags tags
-// @Produce json
-// @Success 200 {array} model.Tags
-// @Failure 400
-// @Router /v1/api/tags/getTagsList [get]
 func (TagsApi) GetTagsList(c *gin.Context) {
 	tags, err := model.GetTagsList()
 	if err != nil {
