# api/handle_tags_records.go
@@ -8,16 +8,6 @@ import (
 type TagsRecordsApi struct {
 }
 
-// AddTagsRecords godoc
-// @Summary Add new tags records
-// @Description Add new tags records to the system
-// @Tags tags-records
-// @Accept json
-// @Produce json
-// @Param tagsRecords body model.TagsRecords true "Tags Records object"
-// @Success 200 " Successfully added tags records"
-// @Failure 400 " Error adding tags records"
-// @Router /v1/api/tags/records/add [post]
 func (TagsRecordsApi) AddTagsRecords(c *gin.Context) {
 	var tagsRecords model.TagsRecords
 	if err := c.ShouldBindJSON(&tagsRecords); err != nil {
