# src/routes/other.go
@@ -2,14 +2,10 @@ package routes
 
 import (
 	"github.com/gin-gonic/gin"
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
 	"novaro-server/api"
 )
 
 func AddOtherRoutes(r *gin.RouterGroup) {
-	// 使用gin-swagger中间件来提供API文档
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	collections := r.Group("/api/collections")
 	{
 		collections.POST("/add", api.CollectionsApi{}.CollectionsTweet)
@@ -22,13 +18,14 @@ func AddOtherRoutes(r *gin.RouterGroup) {
 		comments.GET("/getCommentsListByParentId", api.CommentsApi{}.GetCommentsListByParentId)
 		comments.GET("/getCommentsListByUserId", api.CommentsApi{}.GetCommentsListByUserId)
 		comments.POST("/add", api.CommentsApi{}.AddComments)
+		comments.DELETE("/delete", api.CommentsApi{}.DeleteById)
 	}
 
 	posts := r.Group("/api/posts")
 	{
 		posts.GET("/getPostsById", api.PostsApi{}.GetPostsById)
 		posts.GET("/getPostsByUserId", api.PostsApi{}.GetPostsByUserId)
-		posts.GET("/getPostsList", api.PostsApi{}.GetPostsList)
+		posts.POST("/getPostsList", api.PostsApi{}.GetPostsList)
 		posts.POST("/savePosts", api.PostsApi{}.SavePosts)
 		posts.DELETE("/delPostsById", api.PostsApi{}.DelPostsById)
 	}
